# hrmm

./: .gitignore  aa.html  aa.md  aa.py  bb.html  data.json  data.py  data.txt  huxi.html  pyproject.toml  requirements.txt  test2.py  test3.py
app/: package.json
app/config/: config.js
doc/: APJ CV_ Zero Li_EN（模板-开发）.doc  APJ CV_ Zero Li_EN（模板-开发）.docx  APJ CV_Henry Jia_EN（模板TL）.doc  APJ CV_张嘉茜-CN（模板-开发）.doc  APJ CV_徐玉琴-CN（模板TL).doc  APJ职位申请表（新）.docx  HR系统相关流程图.xls  HR系统需求.docx  员工个人资料表模板（入职）.xlsx  面试评估表-测试.xls  面试评估表_开发（新）.xls
doc/前程/: 51job_Java_林文献(694769568).doc  51job_刘忠华_JAVA开发工程师(693360077).doc  51job_朱世武_DBA（数据库管理及维护）(44307689).docx  51job_朱世武_DBA（数据库管理及维护）(44307689).docx.html  51job_朱世武_DBA（数据库管理及维护）(44307689).docx.html.json  51job_高永超_JAVA开发工程师(622666553).doc  崔敏怡-行政教务主管(644793543).doc  梁旺-Java.doc  邓海燕_测试.docx  邓海燕_测试.docx.html  邓海燕_测试.docx.html.json  邝卓文-项目经理.doc  黄忠煌_SharePoint工程师(696155325).doc
doc/智联/: 智联招聘_曹哲军_中文_20180606_40264.doc  智联招聘_曹哲军_中文_20180606_40264.docx  智联招聘_曹哲军_中文_20180606_40264.docx.html  智联招聘_曹哲军_中文_20180606_40264.docx.html.json  智联招聘_杨湖林_Java开发工程..._中文_20170822_61407025.doc  智联招聘_杨湖林_Java开发工程..._中文_20170822_61407025.docx  智联招聘_杨湖林_Java开发工程..._中文_20170822_61407025.docx.html  智联招聘_杨湖林_Java开发工程..._中文_20170822_61407025.docx.html.json  智联招聘_胡茜_商务经理-主管_中文_20180615_1529047915690.docx  智联招聘_胡茜_商务经理-主管_中文_20180615_1529047915690.docx.html  智联招聘_胡茜_商务经理-主管_中文_20180615_1529047915690.docx.html.json  (+4 more)
docker/: Dockerfile  docker-compose.yml
hrmm/: db.sqlite3  start.sh
resumesdk/: README.txt  测试账号.txt
test/: const.py  data.py  test_resume.py
(+44 files in other folders)
