[tool.poetry]
name = "hrm"
version = "0.1.0"
description = ""
authors = ["zhoucheng <zhoucheng@kingsoft.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "install"
django = "^3.0.5"
djangorestframework = "^3.11.0"
markdown = "^3.2.1"
django-filter = "^2.2.0"
drf-writable-nested = "^0.6.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.9"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
